add Google tag to home page
add Google tag to home page

--- a/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-01-26T21:03:20Z</date>
+						<date>2024-10-02T19:05:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wQV2F9Jvzlpl
-								rHSHn9/I5g==
+								UwGgagaM1DBG
+								G9zjYgWprQ==
 								</data>
 								<key>Size</key>
-								<integer>76261</integer>
+								<integer>75944</integer>
 							</dict>
 							<key>index_files/large-526602.png</key>
 							<dict>
